src/objects/AgencyClientRelationship__c.object
<CustomObject>
    <fields>
        <fullName>Agency__c</fullName>
        <label>Agency</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match filter criteria. You may only select Accounts with the Sponsorship Agency record type.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Sponsorship Agency</value>
            </filterItems>
            <infoMessage>Please select a Sponsorship Agency Account.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Clients</relationshipLabel>
        <relationshipName>AgencyClientRelationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Client</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match filter criteria. You may only select Accounts with the Sponsorship Client record type.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Sponsorship Client</value>
            </filterItems>
            <infoMessage>Please select a Sponsorship Client Account.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agencies</relationshipLabel>
        <relationshipName>AgencyClientRelationships1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Medium__c</fullName>
        <label>Medium</label>
        <picklist>
            <picklistValues>
                <fullName>Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OOH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Buying</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning/Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>Target</label>
        <picklist>
            <picklistValues>
                <fullName>Consumer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HCP</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Agency Client Relationship</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Agency Client Relationship Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agency Client Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>